resources/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: mosquitto
  annotations:
    metallb.universe.tf/address-pool: internal
    external-dns.alpha.kubernetes.io/hostname: mqtt.crt.house
spec:
  type: LoadBalancer
  svcType: LoadBalancer
  ports:
  - port: 1883
    targetPort: mosquitto
    protocol: TCP
    name: mosquitto
  selector:
    app.kubernetes.io/instance: mosquitto
    app.kubernetes.io/name: mosquitto
    pod.name: main
